# ScratchMyVoice

./: CMakeLists.txt  ScratchMyVoice.jucer
JuceLibraryCode/: JuceHeader.h
Source/: AudioEngine.cpp  AudioEngine.h  Constants.h  CrossfaderComponent.cpp  CrossfaderComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  SampleListComponent.cpp  SampleListComponent.h  SampleSlotComponent.cpp  SampleSlotComponent.h  TurntableComponent.cpp  TurntableComponent.h  WaveformComponent.cpp  WaveformComponent.h
